--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -41,8 +41,16 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Nosotros</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../sectores/index.html">Sectores</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Sectores</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="../sectores/salud/index.html">salud</a>
+              <a class="dropdown-item" href="../sectores/alimentos-bebidas/index.html">Alimentos y bebidas</a>
+              <a class="dropdown-item" href="../sectores/farmaceutico/index.html">Farmaceutico</a>               
+              <a class="dropdown-item" href="../sectores/construccion/index.html">Construccion</a>
+              <a class="dropdown-item" href="../sectores/minerita-petroleo/index.html">Mineria y petroleo</a>
+              <a class="dropdown-item" href="../sectores/plantaciones-ganaderia/index.html">Plantaciones y ganaderia</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../soluciones/index.html">Soluciones</a>
@@ -127,11 +135,11 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/clean-blog.min.js"></script>
+  <script src="../js/clean-blog.min.js"></script>
 
 </body>
 
