--- a/sectores/plantaciones-ganaderia/index.html
+++ b/sectores/plantaciones-ganaderia/index.html
@@ -90,36 +90,32 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
+        <h2 style="text-align: center;">INSTALACIONES DE ALTA CALIDAD PARA
+          LA AGRICULTURA Y GANADERÍA
+          </h2>
+          <p>Este sector exige facilidad de limpieza, durabilidad, clima controlado, amplios espacios y diseños con propósito. Nuestra propuesta es el sistema constructivo basado en  PVC, aplica a Plantaciones - Ganadera - Avícola - Porcícola – Otros
+            la combinación de los paneles de PVC, nuestra experiencia en el diseño y conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control
+            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm
+            Entre muchos beneficios para este sector tenemos:
 
-          <p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
-
-          <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
-
-          <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
-
-          <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the experience most certainly changes your perspective. The things that we share in our world are far more valuable than those which divide us.</p>        
+          <ul> 
+            <li>Ambiente de cultivo optimizado (Temperatura y Humedad).</li>
+            <li>Superficie Resistente al Moho.</li>
+            <li>Excelentes propiedades térmicas y reflectividad lumínica.</li>
+            <li>Durabilidad y resistencia.</li>
+            <li>Excelente acabado.</li>
+            <li>Aislante acústico.</li>
+            <li>Rapidez de construcción.</li>
+            <li>Bajo costo de mantenimiento.</li>
+            <li>Ignífugo y autoextinguidle.</li>
+            <li>Norma Sismo-resistente.</li>
+            <li>Código Sanitario.</li>
+          </ul>   
+            </p>    
       </div>
     </div>
-
-    
   </div>
-  <div class="container" style="background-color: #6ea6cc; height: 38.9em; ">
-    <div style="padding:1em;">
-    <h2 style="color: #f6e642; text-align: center;">
-      Capacidades
-    </h2>
-        <img src="../../img/formularios-icon2.jpg" alt="" style="float: left;">
-          <p style="padding-left: 320px;"> Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals.</p>
-<br><br>
-          <img src="../../img/formularios-icon2.jpg" alt="" style="float: left;">
-          <p style="padding-left: 320px;">Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals.</p>
-<br><br> 
-          <img src="../../img/formularios-icon2.jpg" alt="" style="float: left;">
-          <p style="padding-left: 320px;">Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals.</p>
-        </div>
-  </div>
- 
+   
   <!-- Footer -->
   <footer>
     <div class="container">
