--- a/sectores/construccion/index.html
+++ b/sectores/construccion/index.html
@@ -90,38 +90,33 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
-
-          <p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
-
-          <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
-
-          <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
-
-          <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the experience most certainly changes your perspective. The things that we share in our world are far more valuable than those which divide us.</p>
-
+        <h2 style="text-align: center;">CONSTRUCCIONES DE ALTA CALIDAD
+          TÉCNICAS MODERNAS Y NOVEDOSAS
+          </h2>
+          <p>Las aplicaciones de los paneles de PVC en la construcción abarcan un gran rango como Vivienda, Institucional, Bodegas y Otros. Construir nunca ha sido tan fácil, práctico, seguro y eficiente. 
+            El sistema constructivo basado en  PVC se adapta fácilmente a cualquier diseño y tipo de vivienda, ofreciendo espacios confortables
+            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm
+            la combinación de los paneles de PVC y nuestra experiencia en el diseño y ensamblaje le ayudan a controlar los costos y a maximizar su ganancia.
+            Entre muchos beneficios para este sector tenemos:
+          <ul>
+           <li> Durabilidad y resistencia.</li> 
+           <li> Excelente acabado.</li>
+           <li> Aislante térmico y acústico.</li>
+           <li> Rapidez de construcción.</li>
+           <li> Bajo costo de mantenimiento.</li>
+           <li> No requiere acabados.</li>
+           <li> Construcción limpia.</li>
+           <li> Fabricación a la medida disminuyendo desperdicios.</li>
+           <li> Desmontable - reutilizable.</li>
+           <li> Ignífugo y autoextinguidle.</li>
+           <li> Liviano y transportable.</li>
+           <li> Norma Sismo-resistente.</li>
+           <li> Código Sanitario.</li>
+          </ul>    
+            </p>
       </div>
     </div>
   </div>
-
-  <div class="container" style="background-color: #6ea6cc; height: 38.9em; ">
-    <div style="padding:1em;">
-    <h2 style="color: #f6e642; text-align: center;">
-      Capacidades
-    </h2>
-        <img src="../../img/formularios-icon2.jpg" alt="" style="float: left;">
-          <p style="padding-left: 320px;"> Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals.</p>
-<br><br>
-          <img src="../../img/formularios-icon2.jpg" alt="" style="float: left;">
-          <p style="padding-left: 320px;">Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals.</p>
-<br><br> 
-          <img src="../../img/formularios-icon2.jpg" alt="" style="float: left;">
-          <p style="padding-left: 320px;">Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals.</p>
-        </div>
-  </div>
-
-
-
 
   <!-- Footer -->
   <footer>
