--- a/soluciones/index.html
+++ b/soluciones/index.html
@@ -63,7 +63,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('../img/sol/disenos-ambiente.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
