--- a/index.html
+++ b/index.html
@@ -55,9 +55,22 @@
                 <a class="dropdown-item" href="sectores/plantaciones-ganaderia/index.html">Plantaciones y ganaderia</a>
               </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="soluciones/index.html">Soluciones</a>
+            <!-- ---------------------------------------------- -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="soluciones/construcciones-pvc/index.html">Construcciones en PVC</a>
+                <a class="dropdown-item" href="soluciones/disenos-estructurales/index.html">Diseño Estructurales</a>
+                <a class="dropdown-item" href="soluciones/consultoria/index.html">Consultoria</a>               
+                <a class="dropdown-item" href="soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
+                <a class="dropdown-item" href="soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
+              </div>
             </li>
+
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="soluciones/index.html">Soluciones</a>
+            </li> -->
+            <!-- ---------------------------------------------- -->
             <li class="nav-item">
               <a class="nav-link" href="experiencias/index.html">Experiencias</a>
             </li>
