--- a/sectores/plantaciones-ganaderia/index.html
+++ b/sectores/plantaciones-ganaderia/index.html
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Plantaciones y ganaderia</h1>
+            <h1>Plantaciones y ganadería</h1>
           </div>
         </div>
       </div>
@@ -98,20 +98,66 @@
             El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm
             Entre muchos beneficios para este sector tenemos:
 
-          <ul> 
-            <li>Ambiente de cultivo optimizado (Temperatura y Humedad).</li>
-            <li>Superficie Resistente al Moho.</li>
-            <li>Excelentes propiedades térmicas y reflectividad lumínica.</li>
-            <li>Durabilidad y resistencia.</li>
-            <li>Excelente acabado.</li>
-            <li>Aislante acústico.</li>
-            <li>Rapidez de construcción.</li>
-            <li>Bajo costo de mantenimiento.</li>
-            <li>Ignífugo y autoextinguidle.</li>
-            <li>Norma Sismo-resistente.</li>
-            <li>Código Sanitario.</li>
-          </ul>   
-            </p>    
+              <!-- beneficios -->
+              <table style="text-align: center;"> 
+
+                <tr>
+                  <td>
+                    Ambiente de cultivo optimizado (Temperatura y Humedad). <br>
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/crop.svg" width="115" height="115">
+                  </td>
+                  <td>
+                    Superficie Resistente al Moho.
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="115" height="115"> 
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Excelentes propiedades térmicas y reflectividad lumínica. <br>
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/thermometer.svg" width="115" height="115">
+                  </td>
+                  <td>
+                    Durabilidad y resistencia. <br>
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115">
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Aislante acústico. <br>
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115">
+                  </td>
+                  <td>
+                    Excelente acabado. <br>
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115">
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Rapidez de construcción. <br>
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115">
+                  </td>
+                  <td>
+                    Bajo costo de mantenimiento.
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115">
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Ignífugo y autoextinguidle. <br>
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115">
+                  </td>
+                  <td>
+                    Norma Sismo-resistente.
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115">
+                  </td>
+                </tr>
+                <th colspan="2">
+                    Código Sanitario. <br>
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115">
+                </th> 
+             </table> 
+  
+          </p>    
       </div>
     </div>
   </div>
@@ -123,26 +169,16 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.youtube.com/channel/UCLhxza72203zpdSIySPLOuQ">
                 <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-youtube-square" style="font-size: 50px;"></i>
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.linkedin.com/company/amviestruc">
                 <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-linkedin" style="font-size: 50px;"></i>
                 </span>
               </a>
             </li>
