--- a/sectores/minerita-petroleo/index.html
+++ b/sectores/minerita-petroleo/index.html
@@ -95,22 +95,72 @@
             Los campamentos en PVC cuentan con las redes esenciales: Agua, Luz, energía y Aire acondicionado y redes especiales voy  y datos, redes de detección de fuego  y gas, redes contraincendios.
             Entre muchos beneficios para este sector tenemos:
 
-          <ul>
-            <li>Durabilidad y resistencia.</li>
-            <li>Excelente acabado.</li>
-            <li>Aislante térmico y acústico.</li>
-            <li>Rapidez de construcción.</li>
-            <li>Bajo costo de mantenimiento.</li>
-            <li>No requiere acabados.</li>
-            <li>Construcción limpia.</li>
-            <li>Desmontable - reutilizable.</li>
-            <li>Ignífugo y autoextinguidle.</li>
-            <li>Liviano y transportable.</li>
-            <li>Norma Sismo-resistente.</li>
-            <li>Código Sanitario.</li>
-          </ul>   
+            <!-- beneficios -->
+            <table style="text-align: center;"> 
 
-            </p>
+              <tr>
+                <td>
+                  Durabilidad y resistencia. <br>
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115">
+                </td>
+                <td>
+                  Excelente acabado. <br>
+                <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115"> 
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Aislante térmico y acústico. <br>
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115">
+                </td>
+                <td>
+                  Rapidez de construcción. <br>
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115">
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Bajo costo de mantenimiento.
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115">
+                </td>
+                <td>
+                  Construcción limpia. <br>
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="115" height="115">
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Desmontable - reutilizable. <br>
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="115" height="115">
+                </td>
+                <td>
+                  No requiere acabados. <br>
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="115" height="115">
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Ignífugo y autoextinguidle. <br>
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115">
+                </td>
+                <td>
+                  Liviano y transportable.
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="115" height="115">
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Norma Sismo-resistente. <br>
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115">
+                </td>
+                <td>
+                  Código Sanitario. <br>
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115">
+                </td>
+              </tr>
+            </table>  
+
+          </p>
       </div>
     </div>
   </div>
@@ -122,26 +172,16 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.youtube.com/channel/UCLhxza72203zpdSIySPLOuQ">
                 <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-youtube-square" style="font-size: 50px;"></i>
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.linkedin.com/company/amviestruc">
                 <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-linkedin" style="font-size: 50px;"></i>
                 </span>
               </a>
             </li>
