--- a/experiencias/index.html
+++ b/experiencias/index.html
@@ -71,14 +71,14 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('../img/exp/experiencia.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
+            <h1>Experiencias</h1>
+            <span class="subheading">Conoce nuestros casos de éxito</span>
           </div>
         </div>
       </div>
