modificacion de textos

--- a/sectores/construccion/index.html
+++ b/sectores/construccion/index.html
@@ -93,14 +93,14 @@
         <h2 style="text-align: center;">CONSTRUCCIONES DE ALTA CALIDAD
           TÉCNICAS MODERNAS Y NOVEDOSAS
           </h2>
-          <p>Las aplicaciones de los paneles de PVC en la construcción abarcan un gran rango como Vivienda, Institucional, Bodegas y Otros. Construir nunca ha sido tan fácil, práctico, seguro y eficiente. 
-            El sistema constructivo basado en  PVC se adapta fácilmente a cualquier diseño y tipo de vivienda, ofreciendo espacios confortables
-            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm
-            la combinación de los paneles de PVC y nuestra experiencia en el diseño y ensamblaje le ayudan a controlar los costos y a maximizar su ganancia.
+          <p>Las aplicaciones de los paneles de PVC en la construcción abarcan un gran rango como Vivienda, Institucional, Bodegas y Otros. Construir nunca ha sido tan fácil, práctico, seguro y eficiente. <br>
+            El sistema constructivo basado en  PVC se adapta fácilmente a cualquier diseño y tipo de vivienda, ofreciendo espacios confortables. <br>
+            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm 
+            la combinación de los paneles de PVC y nuestra experiencia en el diseño y ensamblaje le ayudan a controlar los costos y a maximizar su ganancia. <br><br>
             Entre muchos beneficios para este sector tenemos:
 
             <!-- beneficios -->
-            <table style="text-align: center;"> 
+            <table style="text-align: center; font-weight: bold;"> 
 
               <tr>
                 <td>
