--- a/sectores/farmaceutico/index.html
+++ b/sectores/farmaceutico/index.html
@@ -93,12 +93,13 @@
         <h2 style="text-align: center;">INSTALACIONES DE ASEPTICAS PARA
           LA INDUSTRIA DE FARMACEUTICA
           </h2>
-          <p>La aséptica es fundamental en un laboratorio farmacéutico. Las construcciones con paneles en PVC y nuestros diseños cumplen estos requerimientos, la combinación de los paneles de PVC, nuestra experiencia en el diseño y conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control
-            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm
+          <p>La aséptica es fundamental en un laboratorio farmacéutico. Las construcciones con paneles en PVC y nuestros diseños cumplen estos requerimientos, la combinación de los paneles de PVC, nuestra experiencia en el diseño y conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control. <br><br>
+            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm.
+            <br><br>
             Entre muchos beneficios para este sector tenemos:
 
             <!-- beneficios -->
-            <table style="text-align: center;"> 
+            <table style="text-align: center; font-weight: bold;"> 
 
                 <tr>
                   <td>
