--- a/sectores/plantaciones-ganaderia/index.html
+++ b/sectores/plantaciones-ganaderia/index.html
@@ -93,13 +93,21 @@
         <h2 style="text-align: center;">INSTALACIONES DE ALTA CALIDAD PARA
           LA AGRICULTURA Y GANADERÍA
           </h2>
-          <p>Este sector exige facilidad de limpieza, durabilidad, clima controlado, amplios espacios y diseños con propósito. Nuestra propuesta es el sistema constructivo basado en  PVC, aplica a Plantaciones - Ganadera - Avícola - Porcícola – Otros
-            la combinación de los paneles de PVC, nuestra experiencia en el diseño y conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control
-            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm
+          <p>Este sector exige facilidad de limpieza, durabilidad, clima controlado, amplios espacios y diseños con propósito. Nuestra propuesta es el sistema constructivo basado en  PVC, aplica a Plantaciones como:
+            <ul>
+              <li>Ganadera</li>
+              <li>Avícola</li>
+              <li>Porcícola</li>
+              <li>Otros</li>
+            </ul>
+          la combinación de los paneles de PVC, nuestra experiencia en el diseño y   conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control
+            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm</p>
+          <p>
             Entre muchos beneficios para este sector tenemos:
-
+          </p>  
+          <p>
               <!-- beneficios -->
-              <table style="text-align: center;"> 
+              <table style="text-align: center; font-weight: bold;"> 
 
                 <tr>
                   <td>
