--- a/sectores/salud/index.html
+++ b/sectores/salud/index.html
@@ -100,16 +100,25 @@
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
       <h2 style="text-align: center;">TRASCIENDE A LA NUEVA INFRAESTRUCTURA HOSPITALARIA</h2>
-      <p>El método constructivo basado PVC cumple los estándares y buenas prácticas para la infraestructura hospitalaria en Hospitales - Clínicas - Centros de Salud – Otros. 
-      En la actualidad la pandemia presiona a la infraestructura hospitalaria en Colombia a un rápido crecimiento, cumpliendo con la normativa del sector. La combinación de los paneles de PVC con nuestra experiencia le ayudarán a adaptarse a los nuevos retos nacionales.
-      Entre muchos beneficios para este sector tenemos:
+      <p>El método constructivo basado PVC cumple los estándares y buenas prácticas para la infraestructura hospitalaria en: 
+       <ul>
+         <li>Hospitales</li>
+         <li>Clínicas</li>
+         <li>Centros de Salud</li>
+         <li>Otros</li>
+        </ul>
+      </p>
+       
+      <p> En la actualidad la pandemia presiona a la infraestructura hospitalaria en Colombia a un rápido crecimiento, cumpliendo con la normativa del sector. La combinación de los paneles de PVC con nuestra experiencia le ayudarán a adaptarse a los nuevos retos nacionales.</p>
 
+      <p> Entre muchos beneficios para este sector tenemos:</p>
+      <p>
         <!-- beneficios -->
-        <table style="text-align: center;"> 
+        <table style="text-align: center; font-weight: bold;"> 
 
             <tr>
               <td>
-                Altamente Aséptico. <br>
+                 Altamente Aséptico. <br>
                 <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="115" height="115">
               </td>
               <td>
