--- a/sectores/minerita-petroleo/index.html
+++ b/sectores/minerita-petroleo/index.html
@@ -91,12 +91,12 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <h2 style="text-align: center;">CAMPAMENTOS 100% A LA MEDIDA UNIDADES MÓVILES Y PERMANENTES</h2>
-          <p>Nuestros proyectos brindan confort para mantener la salud, el bienestar y el rendimiento del personal de la compañía, incluso independiente de las condiciones ambientales externas. Los paneles de PVC tienen excelentes propiedades de aislamiento térmico y sonoro, ayudando a la concentración de los trabajadores.
+          <p>Nuestros proyectos brindan confort para mantener la salud, el bienestar y el rendimiento del personal de la compañía, incluso independiente de las condiciones ambientales externas. <br><br> Los paneles de PVC tienen excelentes propiedades de aislamiento térmico y sonoro, ayudando a la concentración de los trabajadores. <br><br>
             Los campamentos en PVC cuentan con las redes esenciales: Agua, Luz, energía y Aire acondicionado y redes especiales voy  y datos, redes de detección de fuego  y gas, redes contraincendios.
             Entre muchos beneficios para este sector tenemos:
 
             <!-- beneficios -->
-            <table style="text-align: center;"> 
+            <table style="text-align: center; font-weight: bold;"> 
 
               <tr>
                 <td>
