Se agregan dos tarjetas más con sus respectivas imágenes, títulos, descripciones y botones

--- a/experiencias/index.html
+++ b/experiencias/index.html
@@ -97,6 +97,32 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
+        <div style="display: grid; grid-template-columns: 1fr 1fr;">
+          <div class="card" style="width: 20rem; margin-bottom: 40px;">
+            <img src="../img/exp/campamentos-pvc.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Construcción Módulo de oficinas Fase III área 550m2 en 26 días</h5>
+              <p class="card-text">Amviestruc había logrado posicionarse dentro de las empresas seleccionadas para participar en la construcción de las facilidades de uno de los más...</p>
+              <a href="#" class="btn btn-primary">Conoce más</a>
+            </div>
+          </div>
+          <div class="card" style="width: 20rem; margin-bottom: 40px;">
+            <img src="../img/exp/Reficar 3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cerramiento arquitectónico con vista al Mar Caribe</h5>
+              <p class="card-text">“No quiero perder esa hermosa vista al mar…”, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica...</p>
+              <a href="#" class="btn btn-primary">Conoce más</a>
+            </div>
+          </div>
+          <div class="card" style="width: 20rem; margin-bottom: 40px;">
+            <img src="../img/exp/Reficar 3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cerramiento arquitectónico con vista al Mar Caribe</h5>
+              <p class="card-text">“No quiero perder esa hermosa vista al mar…”, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica...</p>
+              <a href="#" class="btn btn-primary">Conoce más</a>
+            </div>
+          </div>
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
