--- a/index.html
+++ b/index.html
@@ -74,20 +74,19 @@
     <div class="overlay"></div>
     <div class="container">
       <div style="background-color: #6B84B5; width: 100%;">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="menuinicio">
 
+
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </header>
   <main>
-    <!-- imagen de fondo -->
-    <!-- <div class="imgpri">
-      <div>
-          <div class="beneficios">
-              <img src="img/beneficios.PNG" alt="">
-          </div>
-  
-      </div>
-    </div> -->
+<!-- carrusel principal -->
     <div class="container">
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" id="carrusel">
         <ol class="carousel-indicators">
@@ -139,42 +138,57 @@
     <div class="container">
 
     </div>
-    <!-- el alcance de la empresa -->
-    <div class="container">
-      <div class="card-deck">
-        <div class="card">
-          <img src="img/sec/salud-pvc.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <!-- cuerpo principal en grilla -->
+    <div id="grillaCuerpo">
+      <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; align-items: center;">
+        <h2>Intro a Paneles en PVC</h2>
+      </div>
+      
+
+                <!-- el alcance de la empresa -->
+      <div class="container">
+        <div class="card-deck">
+          <div class="card">
+            <img src="img/sec/salud-pvc.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container">
+      <div>
+        <div class="container">
 
-    </div>
-    <!-- imagenes de iconos de clientes -->
-    <div class="container">
+        </div>
+      </div>
+      <div>
+        <!-- imagenes de iconos de clientes -->
+        <div class="container">
 
+        </div>        
+      </div>
     </div>
+
+
+
   </main>
 
 
