Se agrega un archivo css para edición de estilos´sólo para la página de experiencias, se hace edición con el propósito de implementar responsividad. También se muestran las cards con displey: grid

--- a/experiencias/index.html
+++ b/experiencias/index.html
@@ -28,7 +28,9 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   <!--Bootstrap para cards-->
-
+  <!--Se incluye css para experiencias-->
+  <link rel="stylesheet" type="text/css" href="estilo.css">
+  <!--Se incluye css para experiencias-->
 </head>
 
 <body>
@@ -96,8 +98,8 @@
   <!-- Main Content -->
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <div style="display: grid; grid-template-columns: 1fr 1fr;">
+      <div class="col-lg-8 col-md-10 mx-auto centrar">
+      <div class="cards-experiencias">
           <div class="card" style="width: 20rem; margin-bottom: 40px;">
             <img src="../img/exp/campamentos-pvc.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -115,7 +117,7 @@
             </div>
           </div>
           <div class="card" style="width: 20rem; margin-bottom: 40px;">
-            <img src="../img/exp/Reficar 3.png" class="card-img-top" alt="...">
+            <a href="#"><img src="../img/exp/Reficar 3.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Cerramiento arquitectónico con vista al Mar Caribe</h5>
               <p class="card-text">“No quiero perder esa hermosa vista al mar…”, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica...</p>
