Se agrega la subpágina experiencias-1, hasta el momento tiene el mismo código base del index.html de experiencias. También se hace el enlace desde el botón de la card hacia esta subpágina

--- a/experiencias/experiencia-1.html
+++ b/experiencias/experiencia-1.html
@@ -105,7 +105,7 @@
             <div class="card-body">
               <h5 class="card-title">Construcción Módulo de oficinas Fase III área 550m2 en 26 días</h5>
               <p class="card-text">Amviestruc había logrado posicionarse dentro de las empresas seleccionadas para participar en la construcción de las facilidades de uno de los más...</p>
-              <a href="experiencia-1.html" class="btn btn-primary">Conoce más</a>
+              <a href="#" class="btn btn-primary">Conoce más</a>
             </div>
           </div>
           <div class="card" style="width: 20rem; margin-bottom: 40px;">
@@ -113,7 +113,7 @@
             <div class="card-body">
               <h5 class="card-title">Cerramiento arquitectónico con vista al Mar Caribe</h5>
               <p class="card-text">“No quiero perder esa hermosa vista al mar…”, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica...</p>
-              <a href="" class="btn btn-primary">Conoce más</a>
+              <a href="#" class="btn btn-primary">Conoce más</a>
             </div>
           </div>
           <div class="card" style="width: 20rem; margin-bottom: 40px;">
