--- a/experiencias/experiencia-1.html
+++ b/experiencias/experiencia-1.html
@@ -81,7 +81,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('../img/exp/experiencia.jpg')">
+  <header class="masthead" style="background-image: url('../img/exp/campamentos-pvc.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -99,35 +99,59 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto centrar">
-      <div class="cards-experiencias">
-          <div class="card" style="width: 20rem; margin-bottom: 40px;">
-            <img src="../img/exp/campamentos-pvc.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Construcción Módulo de oficinas Fase III área 550m2 en 26 días</h5>
-              <p class="card-text">Amviestruc había logrado posicionarse dentro de las empresas seleccionadas para participar en la construcción de las facilidades de uno de los más...</p>
-              <a href="#" class="btn btn-primary">Conoce más</a>
+        <h2>Construcción Modulo de oficinas Fase III área 550m2 en 26 días</h2><br>
+        <p>Amviestruc había logrado posicionarse dentro de las empresas seleccionadas para participar en la construcción de las facilidades de uno de los más ambiciosos proyectos del país, pero la competencia crecía con el paso de los días y las obras en las cuales podíamos participar disminuían al mismo ritmo.   </p>
+        <p>
+          Era necesario encontrar un diferencial que destacara nuestra marca frente a nuestro Cliente. Para lograr este objetivo teníamos que ofrecer una ventaja competitiva. Después de analizar los condicionantes al interior del proyecto encontramos que uno de los factores predominantes era el tiempo de ejecución de los servicios contratados. Así, que iniciamos la evaluación y diseño de un sistema que nos permitiera obtener menos días en la construcción manteniendo los costos y la calidad. Fueron varias las estrategias implementadas mejorando cada vez más el resultado, pero sin alcanzar el diferenciador en tiempo deseado, hasta que en un trabajo destacado de nuestro grupo de ingeniaría y operaciones encontramos la formula perfecta para ofrecer a nuestro Cliente la certeza de construir un modulo de 550m2 con instalaciones complejas e incluso suministrando e instalando todo el mobiliario requerido para más de 45 puestos de trabajo en 26 días.
+        </p>
+        <p>
+          Definitivamente marcamos la diferencia, lo que generó a nuestra Compañía, AMVIESTRUC, un reconocimiento por nuestra gran velocidad de construcción.
+        </p>
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel"  style=" background-color: rgba(0, 0, 0, 0.7)">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../img/exp/campamentos-pvc.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block" >
+                  <h5>First slide label</h5>
+                  <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="../img/exp/colegio-pvc-1.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="../img/exp/casa-pvc.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="../img/exp/exp1.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              </div>
             </div>
           </div>
-          <div class="card" style="width: 20rem; margin-bottom: 40px;">
-            <img src="../img/exp/Reficar 3.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Cerramiento arquitectónico con vista al Mar Caribe</h5>
-              <p class="card-text">“No quiero perder esa hermosa vista al mar…”, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica...</p>
-              <a href="#" class="btn btn-primary">Conoce más</a>
-            </div>
-          </div>
-          <div class="card" style="width: 20rem; margin-bottom: 40px;">
-            <a href="#"><img src="../img/exp/Reficar 3.png" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h5 class="card-title">Cerramiento arquitectónico con vista al Mar Caribe</h5>
-              <p class="card-text">“No quiero perder esa hermosa vista al mar…”, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica...</p>
-              <a href="#" class="btn btn-primary">Conoce más</a>
-            </div>
-          </div>
+          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
       </div>
     </div>
   </div>
