--- a/experiencias/experiencia-1.html
+++ b/experiencias/experiencia-1.html
@@ -107,7 +107,7 @@
         <p>
           Definitivamente marcamos la diferencia, lo que generó a nuestra Compañía, AMVIESTRUC, un reconocimiento por nuestra gran velocidad de construcción.
         </p>
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel"  style=" background-color: rgba(0, 0, 0, 0.7)">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -115,17 +115,10 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/exp/campamentos-pvc.jpg" class="d-block w-100" alt="...">
+              <img src="../img/exp/colegio-pvc-1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block" >
                   <h5>First slide label</h5>
                   <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="../img/exp/colegio-pvc-1.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
             </div>
             <div class="carousel-item">
