inclusión listado de lciente

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <!-- Custom styles for this template -->
   <link href="css/clean-blog.css" rel="stylesheet">
 
+
+
 </head>
 
 <body>
@@ -85,7 +87,7 @@
       </div>
     </div>
   </header>
-  <main>
+
 <!-- carrusel principal -->
     <div class="container">
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" id="carrusel">
@@ -135,13 +137,14 @@
         </a>
       </div>
     </div>
+
     <!-- cuerpo principal en grilla -->
     <div id="grillaCuerpo">
-      <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; text-align:center;">
+      <div class="container" style="margin-top: 5%; margin-bottom: 5%; text-align:center;">
         <h2>Intro a Paneles en PVC</h2>
       </div>
       <div class="container" style="text-align: center;">
-          <iframe width="789" height="444" src="https://www.youtube.com/embed/09DrX-kq1HI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="789" height="444" src="https://www.youtube.com/embed/UoFaE25326A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; text-align:center;">
         <h2>Nuestro alcance</h2>
@@ -157,14 +160,14 @@
             </div>
           </div>
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="img/Inicio/bodega.JPG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="img/Inicio/estructura-metalica.JPG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -172,7 +175,7 @@
           </div>
         </div>
       </div>
-      <div>
+      <div class="container">
         <!-- imagenes de iconos de clientes -->
         <div class="container" class="containerCuerpoTitulo" style="margin-top: 5%; margin-bottom: 5%; text-align: center;">
           <h2>Nuestros Clientes</h2>
@@ -185,35 +188,38 @@
               <a href="#" class="right-arrow"><img src="img/Inicio/cliente/right-arrow.png" /></a>
               <div class="carrusel">
                   <div class="product" id="product_0">
-                      <img src="img/Inicio/cliente/cryogas.png" width="195" height="100" />
-                      <h5>Lorem ipsum 1</h5>
-                      <p>165.00 €</p>
+                      <img src="img/Inicio/cliente/puerto-bahia.png" width="195" height="100" />
+                      <h5>Almacenamiento de Combustibles</h5>
                   </div>
                   <div class="product" id="product_1">
                       <img src="img/Inicio/cliente/dehotel.png" width="195" height="100" />
-                      <h5>Lorem ipsum 2</h5>
-                      <p>100.00 €</p>
+                      <h5>Construcción</h5>
                   </div>
-                  <div class="product" id="product_2">
-                      <img src="img/Inicio/cliente/EE.png" width="195" height="100" />
-                      <h5>Lorem ipsum 3</h5>
-                      <p>250.00 €</p>
+                  <div class="product" id="product_9">
+                    <img src="img/Inicio/cliente/oceanos.png" width="195" height="100" />
+                    <h5>Alimentos</h5>
                   </div>
                   <div class="product" id="product_3">
                       <img src="img/Inicio/cliente/etec.png" width="195" height="100" />
-                      <h5>Lorem ipsum 4</h5>
-                      <p>75.00 €</p>
+                      <h5>Fabricantes</h5>
                   </div>
                   <div class="product" id="product_4">
                       <img src="img/Inicio/cliente/fundacionmariosantodomingo.png" width="195" height="100" />
-                      <h5>Lorem ipsum 5</h5>
-                      <p>65.00 €</p>
+                      <h5>Fundación</h5>
                   </div>
                   <div class="product" id="product_5">
-                      <img src="img/Inicio/cliente/fundacionpiesdescalzos.jpg" width="195" height="100" />
-                      <h5>Lorem ipsum 6</h5>
-                      <p>40.00 €</p>
+                      <img src="img/Inicio/cliente/oxy.png" width="195" height="100" />
+                      <h5>Petrolera</h5>
                   </div>
+                  <div class="product" id="product_6">
+                    <img src="img/Inicio/cliente/reficar.png" width="195" height="100" />
+                    <h5>Refinería</h5>
+                  </div>
+                  <div class="product" id="product_7">
+                    <img src="img/Inicio/cliente/tenaristubocaribe.jpg" width="195" height="100" />
+                    <h5>Industria</h5>
+                  </div>
+
               </div>
         
             </div>
@@ -222,12 +228,7 @@
       </div>
     </div>
 
-
-
-  </main>
-
-
-  <!-- Footer -->
+<div class="container">
   <footer>
     <div class="container">
       <div class="row">
@@ -253,6 +254,10 @@
       </div>
     </div>
   </footer>
+</div>
+
+  <!-- Footer -->
+
 
 
   <!-- Bootstrap core JavaScript -->
@@ -261,6 +266,9 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/clean-blog.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+  <script src="js/inicio.js"></script>
+
 
 </body>
 
